# Editor2D_JULY_2022

./: CMakeLists.txt  Editor2D  main.cpp
.cache/clangd/index/: Components.hpp.2CEAFA0A4F1D72E1.idx  Renderer.cpp.EF9E19DBE2E0350F.idx  Renderer.hpp.35B677E6C4F4EA69.idx  Renderer_src.cpp.1A70DE7E467C5654.idx  Window.hpp.8B98D38CF453A619.idx  glad.c.3E76B5873D095D6F.idx  glad.c.C510CB7DC4ADFFC2.idx  glad.h.1F2A6515784D64FA.idx  glad.h.9682F0FE4EEC2EAD.idx  khrplatform.h.79BA096287EBA7AD.idx  khrplatform.h.C144C7740A34D9BE.idx  main.cpp.CE3B5EB362A7B41D.idx
Core/: CMakeLists.txt  Renderer.cpp
Core/include/: Components.hpp  Renderer.hpp
Core/include/glad/: glad.h
Core/src/: Renderer_src.cpp  glad.c
Resources/: Default_Fragment.frag  Default_Vertex.vert
SNAKE_AI/: vertex.glsl
include/: Window.hpp
